--- a/day02-DOM/晨测.md
+++ b/day02-DOM/晨测.md
@@ -25,5 +25,7 @@
 
 - 为什么要标签语义化
     - 语义化标签更具有可读性，便于团队的开发和维护
-    - 没有css的情况下，网页也能很好的呈现出内容结构和代码结构
+    - 没有css的情况下，网页也https://wss.pet/s/4692jjc99n0能很好的呈现出内容结构和代码结构
     - 关于SEO（搜索引擎优化），搜索引擎更能理解到网页中各部分之间的关系，更准确更快速搜索信息
+
+作业提交地址：https://wss.pet/s/4692jjc99n0
