--- a/day02-DOM/晨测.md
+++ b/day02-DOM/晨测.md
@@ -18,6 +18,7 @@
         - 我们不能给基本类型值添加属性和方法 就算添加也是获取不到的
         - 基本类型的比较是值的比较
         - 基本类型的变量是存放在栈区的（栈区指内存里的栈内存),栈区包括了变量的标识符和变量的值
+        - 基本类型的值是不可变的
     - 引用类型值特点：
         - 引用类型的值是可变的，我们可以为引用类型添加属性和方法
         - 引用类型的值是同时保存在栈内存和堆内存中的对象，当我们访问某一个对象的时候，要先访问到栈区的地址 然后引用到堆区的值
@@ -25,7 +26,7 @@
 
 - 为什么要标签语义化
     - 语义化标签更具有可读性，便于团队的开发和维护
-    - 没有css的情况下，网页也https://wss.pet/s/4692jjc99n0能很好的呈现出内容结构和代码结构
+    - 没有css的情况下，网页也能很好的呈现出内容结构和代码结构
     - 关于SEO（搜索引擎优化），搜索引擎更能理解到网页中各部分之间的关系，更准确更快速搜索信息
 
 作业提交地址：https://wss.pet/s/4692jjc99n0
