--- a/day03-BOM/晨测.md
+++ b/day03-BOM/晨测.md
@@ -1,1 +1,114 @@
 ### 12.9晨测
+- 已知结构，写出水平垂直居中方法（translate方法 定位方法  flex方法）
+    结构：<div class="box">
+            <div class="content"></div>
+          </div>
+
+    方法1：
+        .box{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+    方法2：
+        .outer{
+            position: relative;
+        }
+        .content{
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%,-50%);
+        }
+
+    方法3:
+        .outer{
+            position: relative;
+        }
+        .content{
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            margin: auto;
+        }
+
+
+- 谈一谈BFC
+    - BFC(块级格式化上下文)
+    - BFC 的创建
+        根元素（html）
+        浮动元素（float 不为 none）
+        绝对固定定位元素（position 为 absolute 或 fixed）
+        行内块元素（display 为 inline-block）
+        overflow 的值不为 visible 的元素
+    - BFC 的特性
+        创建一个隔离的空间
+        BFC 内部的块级盒会在垂直方向上一个接一个排列
+        同一BFC下的相邻块级元素可能发生外边距折叠
+    - BFC应用
+        - 防止外边距折叠
+        - 清除浮动
+
+- 谈一谈window对象
+    1.代表窗口，作为BOM对象的核心
+    2.替代ECMAScript规定的顶层对象global的功能，作为全局对象，包含所有的全局方法和全局属性
+    3.全局变量和全局函数都是window对象的方法和属性
+
+- 两种定时器的写法 以及返回值 以及清除定时器
+    超时调用计时器：
+        setTimeout(fn,time,函数参数) 返回一个句柄 是一个id
+    清除超时调用计时器：
+        clearTimeout(id)
+    间歇调用计时器：
+        setInterval(fn,time,函数参数) 返回一个句柄 是一个id
+    清除间歇调用计时器：
+        clearInterval(id)
+
+- 谈一谈BOM中的各个对象以及常用属性 
+    1.document:代表整个文档
+    2.screen：代表屏幕信息
+    3.history：代表历史记录
+        go:
+        back:
+        forward:
+    4.navigator:代表浏览器信息
+        platform:
+        onLine
+        userAgent
+    5.location：代表浏览器的url地址
+        href:
+        reload:
+        replace:
+
+- 解析offsetWidth、clientWidth、scrollWidth、以及获取浏览器的宽度
+    - offsetWidth: 
+        - 获取元素的宽度
+        - 包含 内容 + 内边距 + 边框的总宽度
+        - 当元素是display：none隐藏的时候 就获取的是0
+        - 如果是图片或其他资源没有加载的时候，并且没有设置宽的时候，获取的大小就是0
+    - clientWidth
+        - 获取元素的高度
+        - 包含 内容 + 内边距 
+        - 行内元素为0
+    - scrollWidth
+        元素包含的完整内容和自身的padding（无论是否超出 无论超出是否隐藏）
+    - 获取浏览器的宽度：
+        在主流浏览器中：窗口的宽高是通过html标签的clientWidth和clientHeight获取的document.documentElement.clientHeight
+
+
+作业1：
+    已知一个地址"http://www.baidu.com:80?user=laoli&pass=123456"
+    把查询字符串以对象的形式表现出来，得到一个对象{user:"laoli",pass:"123456}
+
+作业2：
+    已知一个查询字符串的对象{user:"laoli",pass:"123456}
+    已知一个地址http://www.baidu.com:80
+    得到一个url字符串"http://www.baidu.com:80?user=laoli&pass=123456"
+
+
+作业提交地址：
+https://wss.pet/s/46jhxgu99d4
+
