--- a/day04-DOM/晨测.md
+++ b/day04-DOM/晨测.md
@@ -62,3 +62,9 @@
 
         - 如果一个元素自身的position属性是fixed，它的包含块就是viewport（视口）
         - 如果由内向外找不到包含块条件的元素，那么html（根元素）被称作为初始包含块
+
+作业：
+    1.tab切换动态
+    2.完成鱼塘管理
+- 作业提交地址：
+https://wss.pet/s/473yfsdrcmg
