--- a/day04-DOM/晨测.md
+++ b/day04-DOM/晨测.md
@@ -1,5 +1,5 @@
 ### 12.11晨测
-- 分别解释 offsetLeft offsetParent  cliengLeft scrollLeft 
+- 分别解释 offsetLeft offsetParent  clientLeft scrollLeft 
     - offsetLeft: 获取一个元素的左边框外侧 到 其包含块的边框内部的距离
     - offsetParent:获取元素的最近定位父级
     - lientLeft：获取左边框的宽度
@@ -61,6 +61,7 @@
         - 如果一个元素自身的position属性是absolute，它的包含块就是离他最近的 拥有定位属性（值不为static）的元素
 
         - 如果一个元素自身的position属性是fixed，它的包含块就是viewport（视口）
+        
         - 如果由内向外找不到包含块条件的元素，那么html（根元素）被称作为初始包含块
 
 作业：
