--- a/day06-DOM/晨测.md
+++ b/day06-DOM/晨测.md
@@ -64,8 +64,8 @@
             2.可以给未来的元素绑定事件
 
 - 阻止默认事件和阻止传播
-    阻止默认事件：e.preventDefault
-    阻止传播：e.stopPropagation
+    阻止默认事件：e.preventDefault()
+    阻止传播：e.stopPropagation()
 
 - 分别解析 offsetX clientX screenX pageX
     clientX:事件发生位置 到 浏览器视口边缘的距离
