--- a/day07-DOM/晨测.md
+++ b/day07-DOM/晨测.md
@@ -1,8 +1,18 @@
 ### 12.15 晨测
 - 手写生成[10,80)的随机数
+    Math.random();//[0,1)
+    Math.random()*70;//[0,70)
+    Math.random()*70 + 10;//[10,80)
+    Math.floor(Math.random()*70 + 10);
 
 - 生成一个7天以后的现在的时间
     比如现在是2020年12月15日16点33分20秒  则得到一个2020年12月22日16点33分20秒
+    方法一：
+    new Date().setDate(new Date().getDate() + 7)
+
+    方法二：
+    new Date(Date.now() + 1000*60*60*24*7);
+
 
 - 谈一谈滚轮事件
     滚轮事件：
@@ -25,6 +35,10 @@
     - footer:footer标签代表一个网页或者章节内容的底部区域（页脚
     - article:表文档、页面、或程序中，可以独立的完整的被外部引用的内容
     - nav:表示在当前文档或其他文档中提供导航链接。
+        静态导航：
+            nav>a
+        动态导航：
+            nav>ul>li>a
     - section:section是html中一个独立的区域（主要针对网页分块），没有其他语义，一般会包含一个独立的标题
     - aside:侧边栏 表示一个和其余页面内容几乎无关的区域
 
@@ -43,4 +57,4 @@
     1.侧边栏
 
 作业提交地址
-https://wss.pet/s/4892jt91iem
+
