--- a/day08-JS高级/晨测.md
+++ b/day08-JS高级/晨测.md
@@ -12,7 +12,7 @@
         A instanceof B:
             判断B在不在A的原型链上 只要在就都会返回true
 
-        Object.prototype.toString.call(任意类型).slice(8,-1).toLowerCase():    
+        Object.prototype.toString.call(任意类型).slice(8,-1).toLowerCase():    1
             完美的检测任意数据类型
 
 - 说明变量类型和数据类型
