--- a/day13-jQuery01/晨测.md
+++ b/day13-jQuery01/晨测.md
@@ -1,3 +1,48 @@
 ### 12.26 晨测
+
+-  js对象和jq对象互换
+    jQ转js
+        - 给下标的方式
+        - jquery提供了get方法() 里边书写下标
+    js转jq:
+        - 在js对象外边 包裹一层 $() 即可把js对象转jq
+
+- 分析jq结构
+    //jQuery构造函数
+    function jQuery() {
+
+    }
+
+    // 使用jQuery选择器获取的元素或者jQ方法返回的元素， 属于jQuery实例化对象
+    // 实例化对象可以调用jQuery的原型方法
+    jQuery.prototype.css = function () {
+
+    }
+
+    //jQuery构造函数对象可以调用自己的静态方法
+    jQuery.ajax = function () {
+
+    }
+
+    //释放jQuery到全局
+    window.jQuery = window.$ = jQuery;
+
+- 写出常用的类数组操作 及 对应含义
+    prev：
+    next：
+    find
+    children
+    parent
+    end
+    sibling
+
+- 写出 window.onload\DOMContentLoaded\ready的区别
+
+
+- 写出两种数组去重的方法
+
+
+
+
 作业提交地址：
-https://wss.pet/s/4bb4sz8yu0e
+https://wss.pet/s/4be62duwk8e
