--- a/day18-ES5+/晨测.md
+++ b/day18-ES5+/晨测.md
@@ -25,7 +25,7 @@
 
 - XML和HTML区别：
     - HTML是超文本标记语言，用于创建网页和Web应用程序，它用于显示数据，而不是传输数据，其焦点是数据的外观。
-    - XML是可扩展标记语言，用于传输数据而不是用于显示数据。其焦点是数据的内容
+    - XML是可扩展标记语言，用于传输和保存数据而不是用于显示数据。其焦点是数据的内容
 
 - 谈一谈Object.create()
     - 创建一个对象的第三种方法，可以指定对象原型（__proto__）和对象属性的描述
@@ -58,6 +58,15 @@
         }
         getter：p.fullName
         setter: p.fullName = "XXX"
+
+        defineProperty(p,"fullName",{
+            get (){
+
+            },
+            set(){
+                
+            }
+        })
 
 - 谈一谈let和const
     - 函数作用域和块作用域：
