--- a/day19.ES6+/晨测.md
+++ b/day19.ES6+/晨测.md
@@ -4,7 +4,7 @@
     - 它可以当作普通字符串使用，也可以用来定义多行字符串。模板字符串中嵌入变量，需要将变量名写在${}之中。
     - 大括号内部可以放入任意的 JavaScript 表达式，可以进行运算，以及引用对象属性。
 
-- js支持的进制写法 以及 进制转换 10进制转换为其他进制其他进制转换为10进制 举例说明 以及 js进制转换的方法
+- js支持的进制写法 以及 进制转换 10进制转换为其他进制,其他进制转换为10进制 举例说明 以及 js进制转换的方法
     - 进制写法：
         二进制: 0b开头
         八进制：0o开头（旧版本是0开头）
