--- a/day21-ES6+/14.晨测.md
+++ b/day21-ES6+/14.晨测.md
@@ -115,3 +115,6 @@
     - finally:
         - 当无论成功或失败都要执行一个操作的时候，则需要使用finally，一般finally书写在最后
         - 不接收参数 一般不考虑返回值
+
+
+作业提交地址：https://wss.pet/s/4f42gat18dk
